--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -14,7 +14,7 @@
 
 FROM ARG_FROM
 
-MAINTAINER Tim Hockin <thockin@google.com>
+MAINTAINER Paul Daniel Iway <paul.daniel.iway@gmail.com>
 
 ADD bin/ARG_ARCH/ARG_BIN /ARG_BIN
 
